# simple-file-crypter

./: .gitignore  README.md  filecrypter.spec  main.py  pyproject.toml  ruff.toml  start.bat
cli/: __init__.py  cli.py
core/: crypto.py  keys.py
ui/: __init__.py  banner.py  file_dialog.py  file_display.py  icons.py  keys_display.py  menu.py  progress.py
utils/: archiver.py  file_handler.py  input_handlers.py  key_loader.py  keyboard_interrupt.py  operation_manager.py  path_cleaner.py  path_detector.py  progress_handler.py  threading_utils.py
