[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filecrypter"
version = "0.1.0"
description = "A secure file encryption tool that uses modern cryptographic techniques"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "cryptography>=36.0.0",
    "rich>=12.0.0",
    "typer>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
filecrypter = "main:main"
sfc = "main:main"

[tool.setuptools]
packages = [
    "ui",
    "utils",
    "cli",
    "core",
    ]
py-modules = ["main"]

[tool.ruff]
extend = "./ruff.toml"